Color cards and fix spacing of page

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -156,10 +157,12 @@ p.account-msg {
     display: grid;
     grid-template: 1fr 1fr / 2fr 1fr;
     padding: 40px 20px 20px 20px;
+    background-color: #e2e8f0;
 }
 
 .projects {
     grid-area: 1 / 1 / 3 / 2;
+    display: grid;
 }
 
 .announcements {
@@ -168,4 +171,26 @@ p.account-msg {
 
 .trending {
     grid-area: 2 / 2 / 3 / 3;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: row;
+    grid-gap: 20px;
+}
+
+.card {
+    width: 325px;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    border-left: orange solid 10px;
+}
+
+.card-action {
+    height: 20px;
+    width: auto;
+}
+
+h4 {
 }
